
syntax = "proto3";
package c2s;
import "google/protobuf/any.proto";
message ServerInfo
{
    string server_id = 1;
    string server_name = 2;
    int32 server_state = 3;
}

message Rpc
{
    message Request
    {
        int64 rpc_id = 1;
        int64 sock_id = 2;
        string method_name = 3;
        uint32 message_idx = 4;
        google.protobuf.Any data = 5;
    }
    message Response
    {
        int32 code = 1;
        int64 rpc_id = 2;
        int64 sock_id = 3;
        string error_str = 4;
        google.protobuf.Any data = 5;
    }
}

message AccountLogin
{
    message Request
    {
        string account = 1;
        string token = 2;
        string passwrod = 3;   // 密码
        string login_dev = 4; //登陆设备
    }
    message Response
    {
        string token = 1;  //重新生成的token
        string gate_token = 2;  //登陆网关的token
        int64 last_logintime = 4;    // 上次登陆时间
        repeated ServerInfo server_infos = 5;    //服务器列表
    }
}

message AccountRegister
{
    message Request
    {
        string account = 1;
        string password = 2;
        string login_dev = 3;
    }
    message Response
    {
        string token = 1;
    }
}

message GateLogin
{
    message Request
    {
        string token = 1;
    }
    message Response
    {

    }
}

message Chat
{
    enum Type
    {
        NONE = 0;
        TEXT = 1;
        IMAGE = 2;
        VOICE = 3;
    }
    message Request
    {
        int64 user_id = 1;
        string message = 2;
        Chat.Type type = 3;
    }

    message Notice
    {

    }
}
